[tool.poetry]
name = "tim_ob"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
torch = "^1.9.0"
torchaudio = "^0.9.0"
pytorch-lightning = "1.2.10"
pandas = "1.2.4"
tqdm = "^4.62.0"
hydra-core = "1.0.6"
librosa = "^0.8.1"
pytest = "^6.2.4"
seaborn = "^0.11.1"
SoundFile = "^0.10.3"
matplotlib = "3.4.1"
numpy = "1.20.2"
omegaconf = "2.0.6"
f90wrap = "^0.2.7"
requests = "^2.26.0"
httpx = "^0.18.2"
ndg-httpsclient = "^0.5.1"
pyOpenSSL = "^20.0.1"
pyasn1 = "^0.4.8"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
